# PANACEA

./: .gitmodules  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt
src/VRI/: CMakeLists.txt
src/VRI/include/VRI/: VRI.h  VRIAllocator.h  VRICommands.h  VRIResources.h  VRISwapchain.h
src/VRI/src/VRI/: VRI.cpp  VRIAllocator.cpp  VRICommands.cpp  VRIResources.cpp  VRISwapchain.cpp
src/basic/: CMakeLists.txt
src/basic/include/basic/control/: ResourceManager.h
src/basic/include/basic/core/: Archive.h  Class.h  Common.h  Hierarchy.h  Object.h  Registry.h  Singleton.h
src/editor/: CMakeLists.txt
src/editor/src/editor/: EditorRenderer.cpp
src/engine/: CMakeLists.txt
src/engine/include/engine/: Viewport.h
src/engine/include/scene/base/: SceneObject.h
src/engine/include/scene/viewport/: Sprite.h
src/engine/include/scene/world/: StaticMeshObject.h
src/engine/src/engine/: Engine.cpp  Viewport.cpp
src/engine/src/scene/base/: Scene.cpp
src/imgui/: CMakeLists.txt
src/rendercore/: CMakeLists.txt
src/rendercore/include/rendercore/: EngineLoader.h  Font.h  Instancer.h  Material.h  RenderStack.h  RenderThread.h  Renderer.h  StaticMesh.h
src/rendercore/src/rendercore/: EngineLoader.cpp  Font.cpp
src/renderer/: CMakeLists.txt
src/renderer/include/renderer/: VulkanRenderer.h
src/renderer/src/renderer/: VulkanRenderer.cpp
src/renderer/src/renderer/passes/: EngineUIPass.cpp  MeshPass.cpp
